  ``_put_on_disk`` methods.  (Andrew Bennetts)

* The ``get_filename`` parameter in the ``config.IniBaseConfig``
  constructor has been deprecated, use the ``file_name`` parameter instead.
  (Vincent Ladeuil)

Internals
*********

* Remove used and broken code path in ``BranchInitHookParams.__repr__``.
  (Andrew Bennetts)

Testing
*******

* HTTP test servers will leak less threads (and sockets) and will not hang on
  AIX anymore. (Vincent Ladeuil, #405745)

* Rearrange thread leak detection code to eliminate global state and make it
  possible to extend the reporting. (Marting [gz], #633462)

* The test suite now simply holds log files in memory, rather than writing them
  out to disk and then reading them back in and deleting them.
  (Andrew Bennetts)

* The way ``bzr selftest --parallel`` generates N partitions of tests to
  run in parallel has changed.  Instead of splitting the list of tests at
  N-1 points, it distributes the tests one-by-one into the partitions in a
  round robin fashion.  This reduces the total time to run the tests in
  parallel because a series of slow tests in the test suite will be
  distributed evenly among the parallel test suites, rather than slowing
  down just one suite.  (Andrew Bennetts)


bzr 2.2.1
#########

:Codename: ??
:2.2.1: NOT RELEASED YET

Bug Fixes
*********

* ``bzr add SYMLINK/FILE`` now works properly when the symlink points to a
  previously-unversioned directory within the tree: the directory is
  marked versioned too.
  (Martin Pool, #192859)

* CommitBuilder now uses the committer instead of _config.username to generate
  the revision-id.  (Aaron Bentley, #614404)

* Cope with Microsoft FTP server that returns reply '250 Directory
  created' when mkdir succeeds.  (Martin Pool, #224373)

* Don't traceback when a lockdir's ``held/info`` file is corrupt (e.g.
  contains only NUL bytes).  Instead warn the user, and allow ``bzr
  break-lock`` to remove it.  (Andrew Bennetts, #619872)
  